UI Fixes
Improved HTML Compliance and prevented the pesky back button from covering important elements.
Fixed #21.

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -6,7 +6,7 @@ body {
 footer {
     width: 100%;
     height: 75px;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
 }
